remove name for anon reasons

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <p id="subtitle">HAACK'S MENACE</p>
       <br>
       <p>
-        After landing in a foreign territory, the young noob, Felipe Haack Schmitz is confronted to a different reality.
+        After landing in a foreign territory, the young noob, Felipe is confronted to a different reality.
       </p>
       <p>
         After enduring terrible meals, strange people speaking in a weird language and a harsh freezing winter, our manga loving Gaucho faces another challenge: the hot summers.
